# orthogonal-parametric-transforms-and-invariants

./: README.md
basis/: DEK.C  FULLPROC.C  GENBAF.C  GENYAD.C  OPER.C  QTOSC.C  TFR.C  basisPROC.C
basis-unix/: CMakeLists.txt  dek.c  genbaf.c  genyad.c  inc.h  main.c  oper.c  qtosc.c  tfr.c
basis1/: basis1.mdl  basis2.mdl  basis3.mdl  basis4.mdl  ccrmx.m  cyccor.m  directtransformation.m  gbf.m  gbf1.m  gbfq.m  gbftfr.m  gbftheta.m  gbtfr.m  genseq.m  genseq1.m  genseq2.m  gtest.m  gtestpi2pi4.m  gtestpi2pi4v1.m  gtestpi2pi4v2.m  gtestpi2pi4v3.m  inversetransformation.m  maxcor.m  prepare.m  process.m  sequences.txt  setR0form2.m  setR1form2.m  test.m  test16.m  testgen.m  toptest.m
papers/: COMMON.doc  METR_PAR(1).doc  article-pasha(1).doc  article-pasha-new.doc  confsparameticsynthrsiswithfastalgorithm.docx
tfr/: DEK.C  FULLPROC.C  GENBAF.C  GENBAF.htm  OPER.C  QTOSC.C  TFR.C
tfr-unix/: CMakeLists.txt  FULLPROC.C  GENBAF.C  GENYAD.C  Makefile
tfr-unix/orig-c-src/: DEK.C  GENYAD.C  OPER.C
tfr/orig-c-src/: FULLPROC.C  GENBAF.C  QTOSC.C  TFR.C
